more questions added, repopulation of question array enabled

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
             </section>
             <section class="display-area">
                 <div id="welcome-message" class="welcome-message">
-                    <p>Welcome!  This quiz will test your understanding of JavaScript fundamentals.  When you are ready, press the start button below to begin.  Good luck!</p>
+                    <p>Welcome!  This quiz will test your understanding of JavaScript fundamentals.  The longer your correct answer streak, the higher score you will receive.  However, incorrect answers will lose you 10 seconds.  When you are ready, press the start button below to begin.  Good luck!</p>
                     <button id="startQuiz" onclick="startTheQuiz()">Start</button>
                 </div>
                 <div id="question-div" class="quiz-display"></div>
